--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,53 @@
     transform: rotate(360deg);
   }
 }
+
+.middle{
+  display: flex;
+  margin: 2%;
+}
+
+.main{
+  width: 90%;
+}
+
+.card-container{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-evenly;
+}
+
+.view-select{ 
+  text-align: right;
+  margin: 5% 0;
+}
+
+.Footer{
+  position:fixed;
+  bottom:0;
+  width:100%;
+  height:60px;   /* Height of the footer */
+  background:rgb(192, 173, 151);
+}
+
+form label, form input{
+  display: block;
+  margin: 2%;
+}
+
+
+form{
+  text-align: left;
+  width: 30%;
+  margin: auto;
+}
+
+.login-text, .signup-text{
+  text-align: center;
+}
+
+button{
+  display: flex;
+  margin: auto;
+}
